# vectorpack

./: .gitignore  ASSESSMENT.md  CONTRIBUTING.md  README.md  flake.nix  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json  vitest.config.ts  vpack.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
docs/: RFC-0001.md  RFC-0002.md  RFC-0003.md  RFC-0004.md  RFC-0005.md  RFC-0006.md  RFC-0007.md  RFC-0008.md
docs/misc/: reliability-in-large-language-models.md
docs/plans/: 2026-02-27-build-logging.md  2026-02-27-env-deps-design.md  2026-02-27-markdown-chunker.md  2026-02-27-nix-dev-env.md  2026-02-27-turborepo-setup.md
engine-rust/: Cargo.toml
engine-rust/src/: chunk.rs  embeddings.rs  error.rs  index.rs  lib.rs  math.rs  napi_bindings.rs  query.rs  serialize.rs
engine-rust/tests/: engine_tests.rs
examples/basic-fs/: README.md  vpack.yml
examples/basic-fs/docs/: culture.md  decisions.md  deploy.md  faq.md  positioning.md  pricing.md  product-vision.md  roadmap.md
patches/: @xenova+transformers+2.17.2.patch
registry/: package.json  tsconfig.json
registry/src/: server.ts
registry/src/routes/: packs.ts  query.ts
scripts/: check-env.sh  vpack.mjs
tasks/: context.md  todo.md
