[package]
name = "vpack-engine"
version = "0.1.0"
edition = "2021"
description = "VectorPack query engine — Rust implementation"
license = "MIT OR Apache-2.0"

[lib]
name = "vpack_engine"
crate-type = ["cdylib", "rlib"]

# Enable napi-rs bindings for Node.js native addon
[features]
default = []
napi = ["dep:napi", "dep:napi-derive"]
# Enable wasm-bindgen bindings for browser/edge
wasm = ["dep:wasm-bindgen", "dep:serde-wasm-bindgen"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
thiserror = "1"
fastembed = "5"
once_cell = "1"

# HNSW index
instant-distance = "0.6"

# napi-rs (Node.js addon) — feature-gated
napi = { version = "2", features = ["napi4", "serde-json"], optional = true }
napi-derive = { version = "2", optional = true }

# wasm-bindgen (browser) — feature-gated
wasm-bindgen = { version = "0.2", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
approx = "0.5"

[build-dependencies]
napi-build = "2"
